--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ highlight-text==0.2
 idna==3.4
 importlib-metadata==6.3.0
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.17.3
 kiwisolver==1.4.4
 markdown-it-py==2.2.0
@@ -28,6 +29,7 @@ numpy==1.24.2
 packaging==23.1
 pandas==1.5.3
 Pillow==9.5.0
+plotly==5.14.1
 protobuf==3.20.3
 pyarrow==11.0.0
 pydeck==0.8.0
@@ -40,12 +42,15 @@ pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
 rich==13.3.4
+scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.12.2
 six==1.16.0
 smmap==5.0.0
 streamlit==1.21.0
 streamlit-option-menu==0.3.2
+tenacity==8.2.2
+threadpoolctl==3.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
